--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -2,25 +2,35 @@
   background-color: pink;
 }
 
-.homepage-intro {
-  margin: 20px;
-  padding: 15px;
-  border: 3px solid purple;
-  border-radius: 10px;
-  background-color: lavenderblush;
+
+
+.homepage-top {
+  display: flex;
+  position: relative; /*allows children to be absolutely positioned*/
+  align-items: center;
+  padding: 20px 30px;
 }
 
-.cozy-font {
-  font-family: "Caveat", cursive;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 25px;
+/* Title*/
+.homepage-title-div {
+  margin: 0;
+  text-align: center;
+  position: absolute;
+  /*Places the edge on the middle(50%) then uses translateX to move it to the middle*/
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .homepage-title {
   font-family: Arial, Helvetica, sans-serif;
   color: yellow;
+  margin: 0;
+}
+
+/* Search Bar Styles */
+.search-bar-div {
+  margin: 0;
+  margin-left: auto;
 }
 
 .search-bar {
@@ -33,6 +43,43 @@
   font-size: 16px;;
 }
 
+.homepage-logo {
+  text-align: left;
+}
+
+.mawile-official-logo {
+  width: 100px;
+}
+
+
+/* Intro Section Styles */
+.homepage-intro {
+  margin: 20px;
+  padding: 15px;
+  border: 3px solid purple;
+  border-radius: 10px;
+  background-color: lavenderblush;
+}
+
+
+
+/* Font Styles */
+.cozy-font {
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 25px;
+}
+
+
+
+/* Mawile Pokedex Link Styles */
+.mawile-pokedex-div {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .mawile-pokedex-link {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
@@ -40,7 +87,14 @@
   text-decoration: none;
 }
 
-.MawileWinter-img {
+
+
+/* Mawile Winter Image Styles */
+.mawile-winter-div {
+  text-align: center;
+}
+
+.mawile-winter-img {
   width: 600px;
   height: auto;
   contain: content;
