--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,3 +1,19 @@
+/* Font Styles */
+.cozy-font {
+  font-family: "Caveat", cursive;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 25px;
+}
+.pixel-font {
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+
 .homepage-body {
   background-color: pink;
 }
@@ -40,7 +56,11 @@
   border: 2px solid purple;
   border-radius: 10px;
   padding: 5px;
-  font-size: 16px;;
+  font-size: 9px;
+  /*Pixel Font*/
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .homepage-logo {
@@ -62,15 +82,6 @@
 }
 
 
-
-/* Font Styles */
-.cozy-font {
-  font-family: "Caveat", cursive;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 25px;
-}
 
 
 
